# SndToWAV

./: .gitmodules  README.md
src/: CMakeLists.txt  Decoder.cpp  Decoder.hpp  IMA4Decoder.cpp  IMA4Decoder.hpp  Log.cpp  Log.hpp  MACEDecoder.cpp  MACEDecoder.hpp  NullDecoder.cpp  NullDecoder.hpp  SndFile.cpp  SndFile.hpp  SndToWAV.cpp  SndToWAV.hpp  SoundSampleHeader.cpp  SoundSampleHeader.hpp  Utils.hpp  WAVFile.cpp  WAVFile.hpp  XLawDecoder.cpp  XLawDecoder.hpp  aifc2wav.cpp  main.cpp
